Show only username on profile page title.

--- a/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
-{% block title %}{{ user.username }} | Adstacy{% endblock %}
+{% block title %}{{ user.username }}{% endblock %}
 
 {% block meta_image %}
 {% if user.image %}
