--- a/src/Adstacy/AppBundle/Resources/public/less/layout/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/landing.less
@@ -4,7 +4,7 @@
 body {
   padding-top: 50px;
   margin-bottom: 0;
-  background-color: #fff;
+  background-color: #333;
 }
 
 #landing .wrapper {
@@ -15,15 +15,23 @@ body {
 #landing-title {
   background-color: @gray-darker;
   background-size: cover;
-  padding-bottom: 20px;
+  margin-bottom: 0;
 
   h1 {
     color: #fff;
-    margin: 0;
+    margin: 40px 0 10px;
     font-weight: bold;
-    font-size: 64px;
+    font-size: 48px;
     text-shadow: 0 5px 10px #000;
     text-align: center;
+  }
+
+  h2 {
+    font-size: 24px;
+    color: #fff;
+    text-shadow: 0 5px 10px #000;
+    text-align: center;
+    margin: 0 0 40px;
   }
 
   .panel {
@@ -33,59 +41,8 @@ body {
   }
 }
 
-#landing-features {
-  background-color: #fff;
-  margin: 20px auto;
-
-  .section {
-    width: 333px;
-    float: left;
-    padding: 20px;
-
-    .lead {
-      font-size: 18px;
-      color: #777;
-      text-align: center;
-    }
-  }
-
-  .section-title {
-    font-size: 40px;
-    color: @gray-dark;
-    text-align: center;
-    font-weight: 300;
-
-    b {
-      color: @brand-primary;
-    }
-  }
-
-  .section-figure {
-    background-color: @brand-primary;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 0 auto;
-    text-align: center;
-    border: 5px solid #e5e5e5;
-    .opacity(.7);
-    .transition(all .2s ease-in-out);
-
-    i[class^="icon"] {
-      font-size: 32px;
-      line-height: 95px;
-      color: #fff;
-      .transition(all .2s ease-in-out);
-    }
-
-    &:hover{
-      .opacity(1);
-
-      i[class^="icon"] {
-        font-size: 50px;
-      }
-    }
-  }
+#landing-heading {
+  text-align: center;
 }
 
 #landing-screenshot {
@@ -94,10 +51,10 @@ body {
 }
 
 #landing-social {
-  border-top: 1px solid @border-color;
+  border-top: 1px solid rgba(255,255,255,0.15);
   padding: 20px 0;
   text-align: center;
-  margin-top: 20px !important;
+  .box-shadow(0 -2px 0 -1px rgba(0,0,0,0.15));
 
   .btn {
     margin: 0 10px;
@@ -131,14 +88,12 @@ body {
 
 @media screen and (max-width: @screen-tablet) {
   #landing .wrapper,
-  #landing-features .section,
   #register-form {
     width: 100% !important;
   }
 
   #landing-screenshot,
-  #register-form,
-  #landing-features .section {
+  #register-form {
     float: none;
   }
 
@@ -146,13 +101,7 @@ body {
     margin: 20px 0;
   }
 
-  #landing-title h1 {
-    margin: 50px 0;
-  }
-
   #landing-screenshot {
-    margin-top: 0;
-
     img {
       .img-responsive(block);
     }
@@ -172,5 +121,6 @@ body {
 @media screen and (min-width: @screen-md-max) {
   #landing-title {
     background: @gray-darker url('../../img/screenshot.jpg') no-repeat center;
+    background-size: cover;
   }
 }
