fix flying loading btn.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -14,6 +14,7 @@ body {
 
 .adstacy-container {
   margin: 0 auto;
+  position: relative;
 }
 
 .follow-container {
@@ -34,7 +35,7 @@ body {
 .load-next {
   position: absolute;
   left: 0;
-  bottom: -50px;
+  bottom: -64px;
   width: 100%;
   border-bottom: 0;
   .border-bottom-radius(0);
