--- a/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
@@ -6,7 +6,7 @@
       <h1>{{ tab|title }}</h1>
     </div>
 
-    <div class="adstacy-container jscroll">
+    <div class="adstacy-container jscroll clearfix">
       {{ block('ajax_content') }}
     </div>
   {% else %}
