change feed list hover style.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/feeds.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/feeds.less
@@ -28,8 +28,7 @@
       padding: 10px 15px;
 
       &:hover {
-        background-color: @brand-primary;
-        color: #fff;
+        background-color: #ebebeb;
         text-decoration: none;
       }
     }
