--- a/src/Adstacy/NotificationBundle/Resources/views/top_notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/top_notifications.html.twig
@@ -8,5 +8,7 @@
   {% else %}
     <li class="no-new-notifications">{{ 'notification.no_notification'|trans }}</li>
   {% endif %}
-  <li id="show-all-notifications" class="list-group-item"><a href="{{ path('adstacy_notification_show') }}">{{ 'notification.show_all'|trans }}</a></li>
+  <li id="show-all-notifications">
+    <a href="{{ path('adstacy_notification_show') }}">{{ 'notification.show_all'|trans }}</a>
+  </li>
 </ul>
