--- a/src/Adstacy/NotificationBundle/Resources/views/all_notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/all_notifications.html.twig
@@ -5,7 +5,7 @@
   {% if notifications|length > 0 %}
     {% for notification in notifications %}
       <li class="list-group-item clearfix">
-        {{ notification|raw }}
+        {% include 'AdstacyNotificationBundle::notification.html.twig' with {notification: notification} %}
       </li>
     {% endfor %}
   {% else %}
