--- a/src/Adstacy/NotificationBundle/Resources/views/notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/notifications.html.twig
@@ -1,7 +1,7 @@
 {% if notifications|length > 0 %}
   {% for notification in notifications %}
     <li class="clearfix">
-      {{ notification|raw }}
+      {% include 'AdstacyNotificationBundle::notification.html.twig' with {notification: notification} %}
     </li>
   {% endfor %}
 {% else %}
