--- a/src/Adstacy/NotificationBundle/Resources/views/top_notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/top_notifications.html.twig
@@ -2,7 +2,7 @@
   {% if notifications|length > 0 %}
     {% for notification in notifications %}
       <li>
-        {{ notification|raw }}
+        {% include 'AdstacyNotificationBundle::notification.html.twig' with {notification: notification} %}
       </li>
     {% endfor %}
   {% else %}
