wrap entire presentation on body-content.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -65,28 +65,30 @@
       </script>
     {% endif %}
   </head>
-  <body class="body-loading">
-    {% block body %}
-      {% block header %}
-        {% include '::header.html.twig' %}
-      {% endblock %}
-      <div class="body clearfix">
-        {% set allFlashes = {success: app.session.flashbag.get('success')} %}
-        {% set allFlashes = allFlashes|merge({warning: app.session.flashbag.get('warning')}) %}
-        {% set allFlashes = allFlashes|merge({error: app.session.flashbag.get('error')}) %}
-        {% if allFlashes|length > 0 %}
-          <div class="adstacy-container">
-            {% for key,flashes in allFlashes %}
-              {% for flash in flashes %}
-                <div class="alert alert-{{ key }}">{{ flash }}</div>
+  <body class="body-loader">
+    <div class="body-content">
+      {% block body %}
+        {% block header %}
+          {% include '::header.html.twig' %}
+        {% endblock %}
+        <div class="body clearfix">
+          {% set allFlashes = {success: app.session.flashbag.get('success')} %}
+          {% set allFlashes = allFlashes|merge({warning: app.session.flashbag.get('warning')}) %}
+          {% set allFlashes = allFlashes|merge({error: app.session.flashbag.get('error')}) %}
+          {% if allFlashes|length > 0 %}
+            <div class="adstacy-container">
+              {% for key,flashes in allFlashes %}
+                {% for flash in flashes %}
+                  <div class="alert alert-{{ key }}">{{ flash }}</div>
+                {% endfor %}
               {% endfor %}
-            {% endfor %}
-          </div>
-        {% endif %}
+            </div>
+          {% endif %}
 
-        {% block content %}{% endblock %}
-      </div>
-    {% endblock %}
+          {% block content %}{% endblock %}
+        </div>
+      {% endblock %}
+    </div>
 
     {% block javascripts %}
       {% if not app.debug %}
