--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -123,10 +123,10 @@ a.mention {
 
 
 @media screen and (min-width: 500px) {
-  .body-loading {
+  .body-loader {
     background: #dfdfdf url("data:image/gif;base64,@{loader-img}") no-repeat center fixed;
   }
-  .body-loading > * {
+  .body-content {
     visibility: hidden;
   }
 }
