--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -67,12 +67,12 @@
 }
 
 .advert-image {
-  background-image: url('../img/diagonal-line.png');
+  background-image: url('../img/noise.png');
   border-radius: @border-radius-base @border-radius-base 0 0;
   position: relative;
 
   img {
-    background: url('../img/spinner.gif') no-repeat center center;
+    background: url(@loader-img) no-repeat center;
     border-radius: @border-radius-small @border-radius-small 0 0;
   }
 }
