Dont show adstacy on title.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
-{% block title %}{{ ad.description }} | Adstacy{%endblock %}
+{% block title %}{{ ad.description }}{%endblock %}
 
 {% block meta_keywords %}{{ ad.tags|join(',') }}{% endblock %}
 
