Only send email to users who subscribed.

--- a/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
@@ -38,7 +38,6 @@
           {{ form_label(form.username, label|default(null), { label_attr: { class: 'control-label' } }) }}
           <div class="form-widget">
             {{ form_widget(form.username, { attr: { class: 'form-control' } }) }}
-            {{ form_errors(form.username) }}
           </div>
         </div>
 
@@ -53,7 +52,6 @@
           {{ form_label(form.email, label|default(null), { label_attr: { class: 'control-label' } }) }}
           <div class="form-widget">
             {{ form_widget(form.email, { attr: { class: 'form-control' } }) }}
-            {{ form_errors(form.email) }}
           </div>
         </div>
 
@@ -61,7 +59,6 @@
           {{ form_label(form.realName, label|default(null), { label_attr: { class: 'control-label' } }) }}
           <div class="form-widget">
             {{ form_widget(form.realName, { attr: { class: 'form-control' } }) }}
-            {{ form_errors(form.realName) }}
           </div>
         </div>
 
@@ -69,7 +66,14 @@
           {{ form_label(form.about, label|default(null), { label_attr: { class: 'control-label' } }) }}
           <div class="form-widget">
             {{ form_widget(form.about, { attr: { class: 'form-control' } }) }}
-            {{ form_errors(form.about) }}
+          </div>
+        </div>
+
+        <div class="form-group">
+          {{ form_label(form.subscription, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.subscription, { attr: { class: '' } }) }}
+            <span class="help">{{"subscription_notice"|trans}}</span>
           </div>
         </div>
 
