Basix ajax upload support.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -67,6 +67,10 @@
   }
 }
 
+.progress-bar {
+  background-color: #b00;
+}
+
 @media screen and (max-width: @screen-tablet) {
   #create-advert {
     width: 100%;
