Ajax upload is functional.

--- a/src/Adstacy/AppBundle/Resources/public/less/module/image-preview.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/module/image-preview.less
@@ -17,6 +17,10 @@
   &.small img {
     max-height: 200px;
   }
+  &.medium img {
+    max-width: 100%;
+    text-align: center;
+  }
 }
 
 .image-upload-trigger {
