--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -6,24 +6,10 @@
     'bundles/adstacyapp/less/layout/create_ad.less'
     'bundles/adstacyapp/css/jquery.fileupload.css'
     'bundles/adstacyapp/css/jquery.fileupload-ui.css'
+    'bundles/adstacyapp/css/jquery-ui.css'
   %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
   {% endstylesheets %}
-{% endblock %}
-
-{% block head_scripts %}
-  {{ parent() }}
-  {% javascripts filter='uglifyjs2'
-    '@AdstacyAppBundle/Resources/public/js/jquery.ui.widget.js'
-    '@AdstacyAppBundle/Resources/public/js/load-image.min.js'
-    '@AdstacyAppBundle/Resources/public/js/canvas-to-blob.min.js'
-    '@AdstacyAppBundle/Resources/public/js/jquery-fileupload/jquery.iframe-transport.js'
-    '@AdstacyAppBundle/Resources/public/js/jquery-fileupload/jquery.fileupload.js'
-    '@AdstacyAppBundle/Resources/public/js/jquery-fileupload/jquery.fileupload-process.js'
-    '@AdstacyAppBundle/Resources/public/js/jquery-fileupload/jquery.fileupload-image.js'
-  %}
-    <script src="{{ asset_url }}" type="text/javascript"></script>
-  {% endjavascripts %}
 {% endblock %}
 
 {% block content %}
@@ -32,15 +18,17 @@
     <div class="panel-body clearfix">
       {{ form_start(form, {attr: {class: 'submit-disable'}}) }}
       {{ form_errors(form) }}
-      {{ form_label(form.image) }}
       <div id="create-advert-image">
-        <input id="fileupload" type="file" name="images[image]">
+        <span class="btn btn-success fileinput-button">
+          <span>Choose Image</span>
+          {{ form_widget(form.image) }}
+          {{ form_widget(form.imagename) }}
+        </span>
       </div>
-      <div id="progress" class="progress">
-        <div class="progress-bar progress-bar-success"></div>
+      <div id="progressbar">
       </div>
       <div class="image-preview medium">
-        <img id="image-preview-img">
+        <img id="image-preview-img" {% if data.image %}src="{{ vich_uploader_asset(data, 'image') }}"{% endif %}>
       </div>
 
       <div id="create-advert-desc">
@@ -104,32 +92,48 @@
 
 {% block javascripts %}
   {{ parent()  }}
+  {% javascripts filter='uglifyjs2'
+    '@AdstacyAppBundle/Resources/public/js/jquery-ui.js'
+    '@AdstacyAppBundle/Resources/public/js/load-image.min.js'
+    '@AdstacyAppBundle/Resources/public/js/canvas-to-blob.min.js'
+    '@AdstacyAppBundle/Resources/public/js/jquery-fileupload/jquery.iframe-transport.js'
+    '@AdstacyAppBundle/Resources/public/js/jquery-fileupload/jquery.fileupload.js'
+    '@AdstacyAppBundle/Resources/public/js/jquery-fileupload/jquery.fileupload-process.js'
+    '@AdstacyAppBundle/Resources/public/js/jquery-fileupload/jquery.fileupload-image.js'
+  %}
+    <script src="{{ asset_url }}" type="text/javascript"></script>
+  {% endjavascripts %}
   <script type="text/javascript">
     $(function() {
-      $('#fileupload').fileupload({
+      $('#ad_image').fileupload({
         url: "{{ path('adstacy_app_upload') }}",
         dataType: 'json',
+        imageOrientation: true,
+        disableImageResize: /Android(?!.*Chrome)|Opera/.test(window.navigator && navigator.userAgent),
+        imageMaxWidth: 1024,
         done: function(e, data) {
           if (data.result.status == 'ok') {
             $.each(data.result.files, function(index, file) {
-              console.log(file);
-              console.log($('.image-preview img'));
               $('.image-preview img').attr('src', file.src);
+              $('#ad_imagename').val(file.name);
             });
           } else {
-            console.log('error');
-            console.log(data.result.error);
+            // display error
           }
+          $('#progressbar').progressbar('destroy');
+        },
+        fail: function(e, data) {
+          $('#progressbar').progressbar('destroy');
         },
         progressall: function(e, data) {
           var progress = parseInt(data.loaded / data.total * 100, 10);
-          $('#progress .progress-bar').css({
-            'width': progress + '%',
-            'height': '20px'
+          $('#progressbar').progressbar({
+            value: progress
           });
         }
       }).prop('disabled', !$.support.fileInput)
       .parent().addClass($.support.fileInput ? undefined : 'disabled')
+
       var $trigger = $('#show-long-desc-btn');
       var $content = $('#create-advert-content');
       var $charsLeft = $('#chars-left');
