Hashtag on separate field.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -67,6 +67,10 @@
   }
 }
 
+.bootstrap-tagsinput {
+  width: 100%;
+}
+
 @media screen and (max-width: @screen-tablet) {
   #create-advert {
     width: 100%;
