Fix image preview centering.

--- a/src/Adstacy/AppBundle/Resources/public/less/module/image-preview.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/module/image-preview.less
@@ -17,9 +17,11 @@
   &.small img {
     max-height: 200px;
   }
+  &.medium {
+    text-align: center;
+  }
   &.medium img {
     max-width: 100%;
-    text-align: center;
   }
 }
 
