drop masonry and expand item width.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -7,12 +7,12 @@ body {
   visibility: visible;
 }
 
-/** Class components **/
-.masonry {
-  margin: 0 auto 14px;
+::-webkit-scrollbar {
+  width: 0;
 }
 
-.adstacy-container {
+/** Class components **/
+.masonry, .adstacy-container {
   margin: 0 auto;
   position: relative;
 }
