--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -2,8 +2,9 @@
 @import "../mixins.less";
 
 .advert {
-  width: 236px;
-  margin: 14px 7px 0 7px;
+  width: 450px;
+  height: auto;
+  margin: 15px 15px 0;
   background-color: #fff;
   border: 1px solid @border-color;
   border-bottom-width: 0;
@@ -15,7 +16,6 @@
     padding: @padding-small-vertical @padding-small-horizontal;
 
     > p {
-      font-size: 13px;
       margin: 0;
     }
   }
@@ -57,7 +57,7 @@
     }
     .btn-group:first-child>.btn:last-child,
     .btn-group:first-child>.dropdown-toggle {
-      border-bottom-right-radius: @border-radius-base;
+      // border-bottom-right-radius: @border-radius-base;
     }
     .unpromote:hover {
       background-color: @gray-dark;
@@ -68,12 +68,11 @@
 
 .advert-image {
   background-image: url('../img/noise.png');
-  border-radius: @border-radius-base @border-radius-base 0 0;
   position: relative;
 
   img {
     background: url(@loader-img) no-repeat center;
-    border-radius: @border-radius-small @border-radius-small 0 0;
+    .img-responsive(block);
   }
 }
 
@@ -120,20 +119,5 @@
   }
   .user-realname-a {
     color: @gray;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .advert {
-    border-radius: 0;
-    height: auto;
-    margin: 10px 0;
-    width: 100%;
-  }
-  .advert-image img {
-    border-radius: 0;
-    height: auto;
-    display: block;
-    width: 100%;
   }
 }
