--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -7,7 +7,7 @@
   .box-shadow(0 1px 1px #bbb);
 
   .btn-default {
-    .box-shadow(0 0 1px #bbb);
+    // .box-shadow(0 0 1px #bbb);
     border-color: #bbb;
   }
   .form-control {
@@ -17,7 +17,7 @@
   .btn-primary,
   .btn-success {
     border-color: 1px solid #555;
-    box-shadow: 0 0 1px #555;
+    // box-shadow: 0 0 1px #555;
   }
 
   .icon-bar {
