--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,12 +46,15 @@
       {% endif %}
       {% javascripts filter='uglifyjs2'
         '@AdstacyAppBundle/Resources/public/js/modernizr.min.js'
+        '@AdstacyAppBundle/Resources/public/js/underscore-min.js'
+        '@AdstacyAppBundle/Resources/public/js/jquery.elastic.source.js'
+        '@AdstacyAppBundle/Resources/public/js/jquery.mentionsInput.js'
         '@AdstacyAppBundle/Resources/public/js/easing.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.ui.totop.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.lazyload.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.jscroll.js'
-        '@AdstacyAppBundle/Resources/public/js/bootstrap-typeahead.js'
-        '@AdstacyAppBundle/Resources/public/js/mention.js'
+        'bundles/fosjsrouting/js/router.js'
+        'js/fos_js_routes.js'
         '@AdstacyAppBundle/Resources/public/js/module/ajaxlink.js'
       %}
         <script src="{{ asset_url }}" type="text/javascript"></script>
