--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -54,6 +54,7 @@
 @import "./mixins.less";
 @import "./utilities.less";
 @import "./overrides.less";
+@import "./jquery.mentionsInput.less";
 
 @import "./base/layout.less";
 @import "./module/image-preview.less";
