--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,6 +25,7 @@
         'bundles/adstacyapp/css/social-buttons.css'
         'bundles/adstacyapp/css/mention.css'
         'bundles/adstacyapp/css/adstacy.css'
+        'bundles/adstacyapp/less/typeahead-bootstrap.less'
       %}
         <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
       {% endstylesheets %}
@@ -53,6 +54,8 @@
         '@AdstacyAppBundle/Resources/public/js/jquery.ui.totop.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.lazyload.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.jscroll.js'
+        '@AdstacyAppBundle/Resources/public/js/hogan.js'
+        '@AdstacyAppBundle/Resources/public/js/typeahead.js'
         'bundles/fosjsrouting/js/router.js'
         'js/fos_js_routes.js'
         '@AdstacyAppBundle/Resources/public/js/module/ajaxlink.js'
