--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -54,6 +54,10 @@
               <i class="icon-twitter twitter-share"></i> Tweet
             </a>
           </li>
+          <li>
+            <a href="{{ path('adstacy_app_ad_report', {id: ad.id}) }}" class="report">
+              <i class="icon-info"></i> Report
+          </li>
         </ul>
       </div>
     </div>
