Add multiple images upload support.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -43,6 +43,7 @@
             }
           })
         }}
+        {{ form_widget(form.images) }}
         {{ form_rest(form) }}
         {{ form_end(form) }}
       </div>
