drop some unused structure.

--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -23,7 +23,7 @@
   </div>
 {% endblock %}
 
-{% block content %}
+{% block body %}
   <div id="landing">
     <div id="landing-title" class="jumbotron">
       <div class="wrapper">
