--- a/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
@@ -3,11 +3,7 @@
 {% block title %}Explore Latest Ads | Adstacy{% endblock %}
 
 {% block content %}
-  <div class="page-title jumbotron text-center">
-    <h1>Explore</h1>
-  </div>
-  <div class="masonry jscroll clearfix">
-    {% include 'AdstacyAppBundle:App:feeds.html.twig' %}
+  <div class="jscroll">
     {{ block('ajax_content') }}
   </div>
 {% endblock %}
@@ -27,14 +23,15 @@
   {{ parent() }}
   <script type="text/javascript">
     $(function() {
-      $('.jscroll').jscroll({
-        callback: function() {
-          var $ads = $('.jscroll-added:last .advert');
-          $('.masonry').masonry('appended', $ads);
-          $ads.find('img.lazy').lazyload();
-          $ads.ajaxlink('ads');
-        }
-      });
+      $('.jscroll').jscroll();
+      // $('.jscroll').jscroll({
+      //   callback: function() {
+      //     var $ads = $('.jscroll-added:last .advert');
+      //     $('.jscroll-inner').append($ads);
+      //     $ads.find('img.lazy').lazyload();
+      //     $ads.ajaxlink('ads');
+      //   }
+      // });
     });
   </script>
 {% endblock %}
