--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -7,15 +7,9 @@
     <div class="page-title jumbotron text-center">
       <h1>User to follows</h1>
     </div>
-    <div class="adstacy-container">
-      {{ block('ajax_content') }}
-    </div>
+    {{ block('ajax_content') }}
   {% else %}
-    <div class="page-title jumbotron text-center">
-      <h1>{{"stream"|trans}}</h1>
-    </div>
-    <div class="masonry jscroll clearfix">
-      {% include 'AdstacyAppBundle:App:feeds.html.twig' %}
+    <div class="jscroll">
       {{ block('ajax_content') }}
     </div>
   {% endif %}
@@ -46,14 +40,15 @@
   {{ parent() }}
   <script type="text/javascript">
     $(function() {
-      $('.jscroll').jscroll({
-        callback: function() {
-          var $ads = $('.jscroll-added:last .advert');
-          $('.masonry').masonry('appended', $ads);
-          $ads.find('img.lazy').lazyload();
-          $ads.ajaxlink('ads');
-        }
-      });
+      $('.jscroll').jscroll();
+      // $('.jscroll').jscroll({
+      //   callback: function() {
+      //     var $ads = $('.jscroll-added:last .advert');
+      //     $('.jscroll-inner').append($ads);
+      //     $ads.find('img.lazy').lazyload();
+      //     $ads.ajaxlink('ads');
+      //   }
+      // });
     });
   </script>
 {% endblock %}
